Auth preloader alignment fix

--- a/assets/css/veery-customer.css
+++ b/assets/css/veery-customer.css
@@ -4164,16 +4164,19 @@ p.login-dark-separator:after {
 }
 
 .is-social-media-wrapper {
-    width: 352px;
-    height: 608px;
+    width: 100%;
+    height: 100%;
     position: absolute;
     z-index: 2000;
     background: rgba(69, 66, 62, 0.3);
     border-radius: 10px;
     text-align: center;
     font-size: 20px;
-    padding-top: 263px;
-    color: #f7af1c;
+    /*padding-top: 200px;*/
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /*passward strength*/
